1999-06-13  Ian Lance Taylor  <ian@zembu.com>

	* ld-checks/asm.s: Use a symbol name for .lcomm.
	* ld-checks/checks.exp: Use different names for the two tests.
	Don't add extra text when invoking fail.

1999-06-12  Ian Lance Taylor  <ian@zembu.com>

	* ld-scripts/phdrs.exp: Change target check from "*-*-linuxaout*"
	to "*-*-linux*aout*".
	* ld-scripts/weak.exp: Likewise.
	* ld-shared/shared.exp: Likewise.  Simplify condition a bit.

Wed Jun  9 12:02:33 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* ld-cdtest/cdtest-main.cc: Avoid `implicit int' warning.
	* ld-shared/sh1.c: Fix typo.

1999-06-04  H.J. Lu  <hjl@gnu.org>

	* lib/ld-lib.exp (default_ld_nm): Clear nm_output first if
	necessary.

1999-05-17  Nick Clifton  <nickc@cygnus.com>

	* ld-undefined/undefined.exp: Add xfail for mcore-elf.

1999-05-11  DJ Delorie  <dj@cygnus.com>

	* ld-srec/srec.exp: Do not run tests for PE based ports.

1999-03-05  Nick Clifton  <nickc@cygnus.com>

	* ld-selective/selective.exp: Do not run tests for COFF or PE
	based ports.

1999-02-17  Nick Clifton  <nickc@cygnus.com>

	* ld-undefined/undefined.exp: Add expected failures for StrongARM
	targets.

	* ld-srec/srec.exp: Add expected failures for StrongARM targets.

	* ld-selective/selective.exp: Add expected failure for ARM-COFF
	targets. 

1999-02-16  Nick Clifton  <nickc@cygnus.com>

	* ld-checks/asm.s: Use .long instead of .word.
	Replace custom section names with .text, .data and .bss.
	* ld-checks/script: Replace custom section names with .text, .data
	and .bss. 
	* ld-checks/checks.exp: Replace custom section names with .text,
	.data and .bss. 

1999-02-11  Nick Clifton  <nickc@cygnus.com>

	* ld-checks: New directory:  Tests for the linker's
	--check-sections option.
	* ld-checks/checks.exp: New file.
	* ld-checks/script: Bogus linker script.
	* ld-checks/asm.s: Simple test assembler file.

Tue Feb  2 19:15:02 1999  Catherine Moore  <clm@cygnus.com>
