@@ -1,0 +1,5 @@
+int
+show_foo ()
+{
+  return 99;
+}
