@@ -1,0 +1,12 @@
+Version definitions:
+1 0x01 0x02608d3f tmpdir/vers18.so
+2 0x00 0x0a7927b1 VERS_1.1
+3 0x00 0x0a7927b2 VERS_1.2
+	VERS_1.1 
+4 0x02 0x0a7922b0 VERS_2.0
+	VERS_1.2 
+
+Version References:
+  required from tmpdir/vers17.so:
+    0x0a7922b0 0x00 05 VERS_2.0
+
