@@ -1,0 +1,6 @@
+int
+main ()
+{
+  printf ("%d\n", show_foo ());
+  return 0;
+}
