@@ -1,0 +1,3 @@
+Version References:
+  required from *tmpdir/vers17.so:
+    0x0a7922b0 0x00 02 VERS_2.0
